--- a/reviewandroid/build.gradle
+++ b/reviewandroid/build.gradle
@@ -35,5 +35,6 @@ dependencies {
     compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
     compile 'io.reactivex.rxjava2:rxjava:2.0.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.1'
+    compile 'com.android.support:design:25.2.0'
     testCompile 'junit:junit:4.12'
 }
