--- a/reviewandroid/src/main/AndroidManifest.xml
+++ b/reviewandroid/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/ico"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
@@ -106,7 +106,28 @@
             android:name=".activity.ScrollingActivity"
             android:label="@string/title_activity_scrolling"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".activity.ScrollActivity"></activity>
+        <activity android:name=".activity.ScrollActivity" />
+        <activity
+            android:name=".CustomViewActivity"
+            android:label="自定义View系列" />
+        <activity android:name=".activity.ShowDrawCircleActivity" />
+        <activity android:name=".activity.StudyGsonActivity" />
+        <activity android:name=".activity.SlidingConflictActivity" />
+        <activity android:name=".activity.StudyServiceActivity" />
+
+        <service
+            android:name=".service.MusicService"
+            android:enabled="true"
+            android:exported="true" />
+        <service
+            android:name=".service.NotificationService"
+            android:enabled="true"
+            android:exported="true" />
+
+        <activity android:name=".activity.VideoViewActivity" />
+        <activity android:name=".activity.ShowChartActivity" />
+        <activity android:name=".activity.CaptureScreenActivity" />
+        <activity android:name=".activity.StudyFileActivity"></activity>
     </application>
 
 </manifest>
