--- a/reviewandroid/build.gradle
+++ b/reviewandroid/build.gradle
@@ -29,6 +29,7 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile project(':MPChartLib')
+    compile files('src/main/libs/volley.jar')
     compile 'com.android.support:appcompat-v7:25.2.0'
     compile 'com.android.support:support-v4:25.1.1'
     compile 'com.android.support:cardview-v7:25.1.1'
