--- a/reviewandroid/build.gradle
+++ b/reviewandroid/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android'
 
 android {
     compileSdkVersion 25
@@ -30,6 +31,8 @@ dependencies {
     })
     compile project(':MPChartLib')
     compile files('src/main/libs/volley.jar')
+    compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+    compile files('src/main/libs/okhttp-3.2.0.jar')
     compile 'com.android.support:appcompat-v7:25.2.0'
     compile 'com.android.support:support-v4:25.1.1'
     compile 'com.android.support:cardview-v7:25.1.1'
@@ -41,4 +44,7 @@ dependencies {
     compile 'com.google.code.gson:gson:2.2.4'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     testCompile 'junit:junit:4.12'
+}
+repositories {
+    mavenCentral()
 }
