--- a/reviewandroid/src/main/AndroidManifest.xml
+++ b/reviewandroid/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-    <uses-permission android:name="android.permission.RECORD_AUDIO"/>
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
 
     <!-- 授权程序访问振动器的权限 -->
     <uses-permission android:name="android.permission.VIBRATE" />
@@ -170,7 +170,8 @@
         <activity android:name=".activity.KotlinActivity" />
         <activity android:name=".activity.OkHttpActivity" />
         <activity android:name=".activity.MpChart06Activity" />
-        <activity android:name=".activity.RecordMediaActivity"></activity>
+        <activity android:name=".activity.RecordMediaActivity" />
+        <activity android:name=".activity.OrmLiteActivity"></activity>
     </application>
 
 </manifest>
